# fast-matrix-mul-cpp

./: .gitignore  CMakeLists.txt  README.md  log.txt  main.cpp  mul.h  report.ipynb  utils.h
